testData/ConcordionTest.java
package concordion;
import <error descr="Cannot resolve symbol 'org'">org</error>.concordion.integration.junit4.ConcordionRunner;
import <error descr="Cannot resolve symbol 'org'">org</error>.junit.runner.RunWith;

@<error descr="Cannot resolve symbol 'RunWith'">RunWith</error>(<error descr="Cannot resolve symbol 'ConcordionRunner'">ConcordionRunner</error>.class)
public class ConcordionTest {
    public void greetingFor() {

    }

    <error descr="Unused method in concordion files">public void unusedMethod() {

    }</error>
}